# MagikaCpp

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build.bat  example.cpp  features.cpp  features.h  magika_cpp_pure.cpp  magika_cpp_wrapper.cpp  magika_cpp_wrapper.h  pure_cpp_example.cpp  test_recursive_scan.cpp
examples/: example.cpp  test_recursive_scan.cpp
include/: Seekable.h  config.h  filefeatures.h  magikacpp.h
libs/onnxruntime-static-1.17.3/linux/lib/cmake/onnxruntime/: onnxruntimeConfigVersion.cmake
libs/onnxruntime-static-1.17.3/linux/lib/pkgconfig/: libonnxruntime.pc
libs/onnxruntime-static-1.17.3/win32/lib/: onnxruntime.lib  onnxruntime_providers_shared.lib
onnxruntime-static-1.17.3/linux/: OnnxRuntimeConfig.cmake
onnxruntime-static-1.17.3/linux/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnxruntime-static-1.17.3/win32/: OnnxRuntimeConfig.cmake
onnxruntime-static-1.17.3/win32/lib/cmake/onnxruntime/: onnxruntimeConfigVersion.cmake  onnxruntimeTargets-release.cmake  onnxruntimeTargets.cmake
src/: Seekable.cpp  config.cpp  features.cpp  filefeatures.cpp  magikacpp.cpp  magikacppimpl.cpp  seekable.cpp
